--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   text-anchor: middle;
   font: 10px sans-serif;
 }
-
+<h1>Welcome to D3.js visualizations for Network Analytics!</h1>
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v6.min.js"></script>
@@ -66,29 +66,29 @@ const data = {
       "type": "Source",
       "group": 1
     },
-    { "id": 20, "name": "case 1", "type": "Case", "group": 4},
-    { "id": 21, "name": "case 2", "type": "Case", "group": 4},
-    { "id": 22, "name": "case 3", "type": "Case", "group": 4},
-    { "id": 23, "name": "case 4", "type": "Case", "group": 4},
-    { "id": 24, "name": "case 5", "type": "Case", "group": 4},
+    { "id": 20, "name": "datum 1", "type": "Case", "group": 4},
+    { "id": 21, "name": "datum 2", "type": "Case", "group": 4},
+    { "id": 22, "name": "datum 3", "type": "Case", "group": 4},
+    { "id": 23, "name": "datum 4", "type": "Case", "group": 4},
+    { "id": 24, "name": "datum 5", "type": "Case", "group": 4},
 
-    { "id": 30, "name": "case 1", "type": "Case", "group": 4},
-    { "id": 31, "name": "case 2", "type": "Case", "group": 4},
-    { "id": 32, "name": "case 3", "type": "Case", "group": 4},
-    { "id": 33, "name": "case 4", "type": "Case", "group": 4},
-    { "id": 34, "name": "case 5", "type": "Case", "group": 4},
+    { "id": 30, "name": "datum 1", "type": "Case", "group": 4},
+    { "id": 31, "name": "datum 2", "type": "Case", "group": 4},
+    { "id": 32, "name": "datum 3", "type": "Case", "group": 4},
+    { "id": 33, "name": "datum 4", "type": "Case", "group": 4},
+    { "id": 34, "name": "datum 5", "type": "Case", "group": 4},
 
-    { "id": 40, "name": "case 1", "type": "Case", "group": 4},
-    { "id": 41, "name": "case 2", "type": "Case", "group": 4},
-    { "id": 42, "name": "case 3", "type": "Case", "group": 4},
-    { "id": 43, "name": "case 4", "type": "Case", "group": 4},
-    { "id": 44, "name": "case 5", "type": "Case", "group": 4},
+    { "id": 40, "name": "datum 1", "type": "Case", "group": 4},
+    { "id": 41, "name": "datum 2", "type": "Case", "group": 4},
+    { "id": 42, "name": "datum 3", "type": "Case", "group": 4},
+    { "id": 43, "name": "datum 4", "type": "Case", "group": 4},
+    { "id": 44, "name": "datum 5", "type": "Case", "group": 4},
 
-    { "id": 50, "name": "case 1", "type": "Case", "group": 4},
-    { "id": 51, "name": "case 2", "type": "Case", "group": 4},
-    { "id": 52, "name": "case 3", "type": "Case", "group": 4},
-    { "id": 53, "name": "case 4", "type": "Case", "group": 4},
-    { "id": 54, "name": "case 5", "type": "Case", "group": 4}
+    { "id": 50, "name": "datum 1", "type": "Case", "group": 4},
+    { "id": 51, "name": "datum 2", "type": "Case", "group": 4},
+    { "id": 52, "name": "datum 3", "type": "Case", "group": 4},
+    { "id": 53, "name": "datum 4", "type": "Case", "group": 4},
+    { "id": 54, "name": "datum 5", "type": "Case", "group": 4}
   ],
   "links": [
     {
